# lck-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirments.dev.txt  test.sh
.github/workflows/: checks.yml
apps/cloud_images/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/cloud_images/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/common/: admin.py  models.py  tests.py  urls.py  views.py
apps/common/management/commands/: generate_dummy_data.py  generate_dummy_images.py  hard_delete_old_subscriptions.py  hard_delete_old_users_communities.py
apps/communities/: models.py  serializers.py  urls.py  views.py
apps/communities/migrations/: 0001_initial.py  0002_initial.py
apps/communitys/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/players/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/players/migrations/: 0001_initial.py  0002_alter_player_position.py  0003_alter_player_position.py
apps/subscription/: models.py
apps/subscriptions/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/subscriptions/management/commands/: hard_delete_old_subscriptions.py
apps/subscriptions/migrations/: 0001_initial.py  0002_initial.py
apps/teams/: admin.py  models.py  serializers.py  urls.py  views.py
apps/teams/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
nginx/: nginx.conf
resources/docker/: Dockerfile  docker-compose.yml
resources/nginx/: Dockerfile  nginx.conf
resources/scripts/: cert.sh  run.sh
